style: 각종 네이밍을 구체적으로 의미를 나타내도록 변경 - 조회 메뉴 이름을 LIST에서 READ로 변경 - delete 메서드를 deleteById로 변경하여 ID에 의해 할인권이 삭제됨을 명시 - Java 16부터 추가된 toList() 기능을 이용해 collect 대체