@@ -2,7 +2,6 @@ package com.devcourse.voucherapp.entity.dto;
 
 import com.devcourse.voucherapp.entity.voucher.Voucher;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 
 @Getter
@@ -13,6 +12,6 @@ public class VouchersResponseDto {
     public VouchersResponseDto(List<Voucher> vouchers) {
         this.vouchers = vouchers.stream()
                 .map(VoucherResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
